Resolves: fdo#87141 Remove deletes the node, release doesn't

regression from introduction of boost::ptr_vector originally one had to Remove
and delete the return to delete it, while now the Remove automatically delete
it. This bare Remove to just "release" it seems to have been overlooked

Change-Id: I175f7c95862ce47402993e5e3b8feaa93af43e75